@@ -16,23 +16,24 @@
  */
 package com.gmt2001.httpclient;
 
+import java.net.URI;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.Map;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+
+import org.json.JSONObject;
+
 import com.gmt2001.dns.CompositeAddressResolverGroup;
+
 import io.netty.handler.codec.http.DefaultHttpHeaders;
 import io.netty.handler.codec.http.HttpHeaderNames;
 import io.netty.handler.codec.http.HttpHeaderValues;
 import io.netty.handler.codec.http.HttpHeaders;
 import io.netty.handler.codec.http.HttpMethod;
 import io.netty.resolver.DefaultAddressResolverGroup;
-import java.net.URI;
-import java.net.URLEncoder;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import org.json.JSONObject;
 import reactor.core.publisher.Mono;
 import reactor.netty.ByteBufFlux;
 import reactor.netty.http.client.HttpClient.RequestSender;
@@ -61,7 +62,7 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The request headers to send
      * @param requestBody The request body to send for POST/PUT/PATCH
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse request(HttpMethod method, URI url, HttpHeaders requestHeaders, String requestBody) {
         reactor.netty.http.client.HttpClient client = reactor.netty.http.client.HttpClient.create();
@@ -87,7 +88,7 @@ public final class HttpClient {
 
                 if (!h.contains(HttpHeaderNames.CONTENT_LENGTH)) {
                     if (requestBody != null) {
-                        h.add(HttpHeaderNames.CONTENT_LENGTH, requestBody.getBytes(Charset.forName("UTF-8")).length);
+                        h.add(HttpHeaderNames.CONTENT_LENGTH, requestBody.getBytes(StandardCharsets.UTF_8).length);
                     } else {
                         h.add(HttpHeaderNames.CONTENT_LENGTH, 0);
                     }
@@ -113,7 +114,7 @@ public final class HttpClient {
                     .defaultIfEmpty(new HttpClientResponse(null, requestBody, new byte[0], url, res)))
                     .toFuture().get(CaselessProperties.instance().getPropertyAsInt("httpclienttimeout", TIMEOUT_TIME), TimeUnit.SECONDS);
         } catch (InterruptedException | ExecutionException | TimeoutException ex) {
-            return new HttpClientResponse(ex, false, method, requestBody, ex.getClass().getName().getBytes(Charset.forName("UTF-8")), requestHeaders, null, null, url);
+            return new HttpClientResponse(ex, false, method, requestBody, ex.getClass().getName().getBytes(StandardCharsets.UTF_8), requestHeaders, null, null, url);
         }
     }
 
@@ -121,7 +122,7 @@ public final class HttpClient {
      * Shortcut to perform a HEAD with the default headers
      *
      * @param url The URL to request
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse head(URI url) {
         return head(url, createHeaders());
@@ -132,7 +133,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param requestHeaders The headers to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse head(URI url, HttpHeaders requestHeaders) {
         return request(HttpMethod.HEAD, url, requestHeaders, null);
@@ -142,7 +143,7 @@ public final class HttpClient {
      * Shortcut to perform a GET with the default headers
      *
      * @param url The URL to request
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse get(URI url) {
         return get(url, createHeaders());
@@ -153,7 +154,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param requestHeaders The headers to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse get(URI url, HttpHeaders requestHeaders) {
         return request(HttpMethod.GET, url, requestHeaders, null);
@@ -164,7 +165,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, String requestBody) {
         return post(url, createHeaders(true, false), requestBody);
@@ -176,7 +177,7 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, HttpHeaders requestHeaders, String requestBody) {
         return request(HttpMethod.POST, url, requestHeaders, requestBody);
@@ -187,7 +188,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param postData A map of post data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, Map<String, String> postData) {
         return post(url, urlencodePost(postData));
@@ -199,30 +200,30 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param postData A map of post data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, HttpHeaders requestHeaders, Map<String, String> postData) {
         return post(url, requestHeaders, urlencodePost(postData));
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a POST with the default headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a POST with the default headers
      *
      * @param url The URL to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, JSONObject json) {
         return post(url, createHeaders(true, true), json);
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a POST with the specified headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a POST with the specified headers
      *
      * @param url The URL to send
      * @param requestHeaders The headers to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse post(URI url, HttpHeaders requestHeaders, JSONObject json) {
         return post(url, requestHeaders, json.toString());
@@ -233,7 +234,7 @@ public final class HttpClient {
      *
      * @param url The URL to send
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, String requestBody) {
         return put(url, createHeaders(true, false), requestBody);
@@ -245,7 +246,7 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, HttpHeaders requestHeaders, String requestBody) {
         return request(HttpMethod.PUT, url, requestHeaders, requestBody);
@@ -256,7 +257,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param putData A map of put data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, Map<String, String> putData) {
         return put(url, urlencodePost(putData));
@@ -268,30 +269,30 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param putData A map of put data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, HttpHeaders requestHeaders, Map<String, String> putData) {
         return put(url, requestHeaders, urlencodePost(putData));
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a PUT with the default headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a PUT with the default headers
      *
      * @param url The URL to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, JSONObject json) {
         return put(url, createHeaders(true, true), json);
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a PUT with the specified headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a PUT with the specified headers
      *
      * @param url The URL to send
      * @param requestHeaders The headers to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse put(URI url, HttpHeaders requestHeaders, JSONObject json) {
         return put(url, requestHeaders, json.toString());
@@ -302,7 +303,7 @@ public final class HttpClient {
      *
      * @param url The URL to send
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, String requestBody) {
         return patch(url, createHeaders(true, false), requestBody);
@@ -314,7 +315,7 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param requestBody The request body
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, HttpHeaders requestHeaders, String requestBody) {
         return request(HttpMethod.PATCH, url, requestHeaders, requestBody);
@@ -325,7 +326,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param patchData A map of patch data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, Map<String, String> patchData) {
         return patch(url, urlencodePost(patchData));
@@ -337,30 +338,30 @@ public final class HttpClient {
      * @param url The URL to request
      * @param requestHeaders The headers to send
      * @param patchData A map of patch data
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, HttpHeaders requestHeaders, Map<String, String> patchData) {
         return patch(url, requestHeaders, urlencodePost(patchData));
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a PATCH with the default headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a PATCH with the default headers
      *
      * @param url The URL to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, JSONObject json) {
         return patch(url, createHeaders(true, true), json);
     }
 
     /**
-     * Shortcut to stringify a JSONObject and submit it as a PATCH with the specified headers
+     * Shortcut to stringify a {@link JSONObject} and submit it as a PATCH with the specified headers
      *
      * @param url The URL to send
      * @param requestHeaders The headers to send
      * @param json The JSON object to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse patch(URI url, HttpHeaders requestHeaders, JSONObject json) {
         return patch(url, requestHeaders, json.toString());
@@ -370,7 +371,7 @@ public final class HttpClient {
      * Shortcut to perform a DELETE with the default headers
      *
      * @param url The URL to request
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse delete(URI url) {
         return delete(url, createHeaders());
@@ -381,7 +382,7 @@ public final class HttpClient {
      *
      * @param url The URL to request
      * @param requestHeaders The headers to send
-     * @return A HttpClientResponse with the results
+     * @return A {@link HttpClientResponse} with the results
      */
     public static HttpClientResponse delete(URI url, HttpHeaders requestHeaders) {
         return request(HttpMethod.DELETE, url, requestHeaders, null);
@@ -389,9 +390,11 @@ public final class HttpClient {
 
     /**
      * Converts a map of post data into a URL-encoded string suitable for the content type application/x-www-form-urlencoded
+     * <p>
+     * To put only a name without the {@code =value}, set the value to {@code null}
      *
      * @param postData A map of post data
-     * @return
+     * @return A URL encoded string
      */
     public static String urlencodePost(Map<String, String> postData) {
         StringBuilder sb = new StringBuilder();
@@ -401,10 +404,10 @@ public final class HttpClient {
                     sb.append('&');
                 }
 
-                sb.append(URLEncoder.encode(k, Charset.forName("UTF-8")));
+                sb.append(URLEncoder.encode(k, StandardCharsets.UTF_8));
 
                 if (v != null) {
-                    sb.append('=').append(URLEncoder.encode(v, Charset.forName("UTF-8")));
+                    sb.append('=').append(URLEncoder.encode(v, StandardCharsets.UTF_8));
                 }
             }
         });
@@ -413,31 +416,31 @@ public final class HttpClient {
     }
 
     /**
-     * Creates a new, empty HttpHeaders
+     * Creates a new, empty {@link HttpHeaders}
      *
-     * @return
+     * @return An empty {@link HttpHeaders}
      */
     public static HttpHeaders createHeaders() {
         return createHeaders(false, false);
     }
 
     /**
-     * Creates a new HttpHeaders with some default headers filled in
+     * Creates a new {@link HttpHeaders} with some default headers filled in
      *
      * @param method The method that is going to be requested. If it is a mutator method that can provide a body, the content type may be set
      * @param isJson If true, sets the accept to application/json. If isMutator is true, sets the content type as well
-     * @return
+     * @return A {@link HttpHeaders} with some default headers, if the parameters require them
      */
     public static HttpHeaders createHeaders(HttpMethod method, boolean isJson) {
         return createHeaders(isMutatorWithBody(method), isJson);
     }
 
     /**
-     * Creates a new HttpHeaders with some default headers filled in
+     * Creates a new {@link HttpHeaders} with some default headers filled in
      *
      * @param isMutatorWithBody If true, sets the content type. If isJson is false, sets to application/x-www-form-urlencoded
      * @param isJson If true, sets the accept to application/json. If isMutator is true, sets the content type as well
-     * @return
+     * @return A {@link HttpHeaders} with some default headers, if the parameters require them
      */
     public static HttpHeaders createHeaders(boolean isMutatorWithBody, boolean isJson) {
         HttpHeaders h = new DefaultHttpHeaders();
@@ -461,7 +464,7 @@ public final class HttpClient {
      * Indicates if the provided method is a mutator that can provide a request body
      *
      * @param method The method to test
-     * @return
+     * @return {@code true} if the {@link HttpMethod} specified is a mutator type
      */
     public static boolean isMutatorWithBody(HttpMethod method) {
         return method == HttpMethod.POST || method == HttpMethod.PUT || method == HttpMethod.PATCH;
@@ -469,26 +472,13 @@ public final class HttpClient {
 
     /**
      * Takes a Map of query params and converts it to a query string
+     * <p>
+     * To put only a name without the {@code =value}, set the value to {@code null}
      *
      * @param query The query params
-     * @return
+     * @return A URL encoded string, including the {@code ?} prefix
      */
     public static String createQuery(Map<String, String> query) {
-        StringBuilder sb = new StringBuilder();
-        sb.append('?');
-
-        boolean first = true;
-        for (Entry<String, String> kv : query.entrySet()) {
-            if (!first) {
-                sb.append('&');
-            }
-            first = false;
-
-            sb.append(URLEncoder.encode(kv.getKey(), StandardCharsets.UTF_8));
-            sb.append('=');
-            sb.append(URLEncoder.encode(kv.getValue(), StandardCharsets.UTF_8));
-        }
-
-        return sb.toString();
+        return "?" + urlencodePost(query);
     }
 }
